--- a/precommit/repos/go.yaml
+++ b/precommit/repos/go.yaml
@@ -72,7 +72,7 @@ repos:
     #   Consider adding aliases to longer-named hooks for easier CLI usage.
     # ==========================================================================
 -   repo: https://github.com/tekwizely/pre-commit-golang
-    rev: master
+    rev: v0.8.2
     hooks:
     #
     # Go Build
