--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,10 @@ repos:
   rev: v0.25.0
   hooks:
   - id: markdownlint
+- repo: https://github.com/adrienverge/yamllint.git
+  rev: v1.26.1
+  hooks:
+  - id: yamllint
 - repo: https://github.com/tekwizely/pre-commit-golang
   rev: v0.8.2
   hooks:
