--- a/precommit/repos/default.yaml
+++ b/precommit/repos/default.yaml
@@ -1,3 +1,4 @@
+---
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.3.0
@@ -23,3 +24,7 @@ repos:
     rev: v0.25.0
     hooks:
       - id: markdownlint
+  - repo: https://github.com/zricethezav/gitleaks
+    rev: e7553b01
+    hooks:
+      - id: gitleaks
