--- a/precommit/repos/default.yaml
+++ b/precommit/repos/default.yaml
@@ -1,7 +1,7 @@
 ---
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.3.0
+    rev: v4.0.1
     hooks:
       - id: detect-aws-credentials
       - id: detect-private-key
@@ -15,16 +15,18 @@ repos:
         name: Check JSON
       - id: check-toml
         name: Check TOML
-      - id: pretty-format-json
-        args: [--autofix]
-      - id: trailing-whitespace
-        args: [--markdown-linebreak-ext=md]
+      - args:
+          - --autofix
+        id: pretty-format-json
+      - args:
+          - --markdown-linebreak-ext=md
+        id: trailing-whitespace
       - id: end-of-file-fixer
   - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.25.0
+    rev: v0.27.1
     hooks:
       - id: markdownlint
   - repo: https://github.com/zricethezav/gitleaks
-    rev: e7553b01
+    rev: v7.5.0
     hooks:
       - id: gitleaks
