--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,54 +1,54 @@
+---
 repos:
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v3.3.0
-  hooks:
-  - id: detect-aws-credentials
-  - id: detect-private-key
-  - id: check-merge-conflict
-  - id: check-case-conflict
-  - id: check-symlinks
-  - id: check-added-large-files
-  - id: check-yaml
-  - id: check-json
-  - id: check-toml
-  - id: pretty-format-json
-  - id: trailing-whitespace
-  - id: end-of-file-fixer
-- repo: https://github.com/igorshubovych/markdownlint-cli
-  rev: v0.25.0
-  hooks:
-  - id: markdownlint
-- repo: https://github.com/adrienverge/yamllint.git
-  rev: v1.26.1
-  hooks:
-  - id: yamllint
-- repo: https://github.com/tekwizely/pre-commit-golang
-  rev: v0.8.2
-  hooks:
-  - id: go-build-mod
-  - id: go-build-pkg
-  - id: go-build-repo-mod
-  - id: go-build-repo-pkg
-  - id: go-test-mod
-  - id: go-test-pkg
-  - id: go-test-repo-mod
-  - id: go-test-repo-pkg
-  - id: go-vet
-  - id: go-vet-mod
-  - id: go-vet-pkg
-  - id: go-vet-repo-mod
-  - id: go-vet-repo-pkg
-  - id: go-sec-mod
-  - id: go-sec-pkg
-  - id: go-sec-repo-mod
-  - id: go-sec-repo-pkg
-  - id: go-fmt
-  - id: go-imports
-  - id: go-returns
-  - id: go-lint
-  - id: go-critic
-  - id: golangci-lint
-  - id: golangci-lint-mod
-  - id: golangci-lint-pkg
-  - id: golangci-lint-repo-mod
-  - id: golangci-lint-repo-pkg
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v3.3.0
+    hooks:
+      - id: detect-private-key
+      - id: check-merge-conflict
+      - id: check-case-conflict
+      - id: check-symlinks
+      - id: check-added-large-files
+      - id: check-yaml
+      - id: check-json
+      - id: check-toml
+      - id: pretty-format-json
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.25.0
+    hooks:
+      - id: markdownlint
+  - repo: https://github.com/adrienverge/yamllint.git
+    rev: v1.26.1
+    hooks:
+      - id: yamllint
+  - repo: https://github.com/tekwizely/pre-commit-golang
+    rev: v0.8.2
+    hooks:
+      # - id: go-build-mod
+      # - id: go-build-pkg
+      # - id: go-build-repo-mod
+      # - id: go-build-repo-pkg
+      # - id: go-test-mod
+      # - id: go-test-pkg
+      # - id: go-test-repo-mod
+      # - id: go-test-repo-pkg
+      # - id: go-vet
+      # - id: go-vet-mod
+      # - id: go-vet-pkg
+      # - id: go-vet-repo-mod
+      # - id: go-vet-repo-pkg
+      # - id: go-sec-mod
+      # - id: go-sec-pkg
+      # - id: go-sec-repo-mod
+      # - id: go-sec-repo-pkg
+      - id: go-fmt
+      - id: go-imports
+      - id: go-returns
+      - id: go-lint
+      # - id: go-critic
+      # - id: golangci-lint
+      # - id: golangci-lint-mod
+      # - id: golangci-lint-pkg
+      # - id: golangci-lint-repo-mod
+      # - id: golangci-lint-repo-pkg
