--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,5 +16,6 @@ jobs:
         run: |
           git clone https://github.com/tfutils/tfenv.git ~/.tfenv
           echo "$HOME/.tfenv/bin" >> $GITHUB_PATH
+          hash -r
           tfenv install
       - run: make test
