--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,10 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '^1.16'
-      - name: install tfenv and terraform
+      - name: install tfenv
         run: |
           git clone https://github.com/tfutils/tfenv.git ~/.tfenv
           echo "$HOME/.tfenv/bin" >> $GITHUB_PATH
-          find ~/
-          ~/.tfenv/bin/tfenv install
+      - name: install terraform
+        run: tfenv install
       - run: make test
