--- a/precommit/repos/go.yaml
+++ b/precommit/repos/go.yaml
@@ -3,30 +3,12 @@ repos:
   - repo: https://github.com/tekwizely/pre-commit-golang
     rev: v0.8.3
     hooks:
-      - id: go-build-mod
-      - id: go-build-pkg
-      - id: go-build-repo-mod
-      - id: go-build-repo-pkg
-      - id: go-test-mod
-      - id: go-test-pkg
-      - id: go-test-repo-mod
-      - id: go-test-repo-pkg
-      - id: go-vet
-      - id: go-vet-mod
-      - id: go-vet-pkg
-      - id: go-vet-repo-mod
-      - id: go-vet-repo-pkg
-      - id: go-sec-mod
-      - id: go-sec-pkg
-      - id: go-sec-repo-mod
-      - id: go-sec-repo-pkg
-      - id: go-fmt
       - id: go-imports
       - id: go-returns
       - id: go-lint
-      - id: go-critic
       - id: golangci-lint
-      - id: golangci-lint-mod
-      - id: golangci-lint-pkg
-      - id: golangci-lint-repo-mod
-      - id: golangci-lint-repo-pkg
+  - repo: https://github.com/mhristof/pre-commit-golang/
+    rev: v0.1.0
+    hooks:
+      - id: gofumpt
+      - id: go-unit-tests
