--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,56 +1,60 @@
 ---
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.3.0
+    rev: v4.0.1
     hooks:
+      - id: detect-aws-credentials
+        args:
+          - --allow-missing-credentials
       - id: detect-private-key
       - id: check-merge-conflict
       - id: check-case-conflict
       - id: check-symlinks
       - id: check-added-large-files
       - id: check-yaml
+        name: Check YAML
       - id: check-json
+        name: Check JSON
       - id: check-toml
+        name: Check TOML
       - id: pretty-format-json
+        args:
+          - --autofix
       - id: trailing-whitespace
-        exclude: terraform/fixtures/.*
+        args:
+          - --markdown-linebreak-ext=md
       - id: end-of-file-fixer
   - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.25.0
+    rev: v0.27.1
     hooks:
       - id: markdownlint
+  - repo: https://github.com/zricethezav/gitleaks
+    rev: v7.5.0
+    hooks:
+      - id: gitleaks
+  - repo: https://github.com/tekwizely/pre-commit-golang
+    rev: v0.8.3
+    hooks:
+      - id: go-imports
+      - id: go-returns
+      - id: go-lint
+      - id: golangci-lint
+  - repo: https://github.com/mhristof/pre-commit-golang/
+    rev: v0.1.0
+    hooks:
+      - id: gofumpt
+      - id: go-unit-tests
+      - id: go-static-check
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.26.1
     hooks:
       - id: yamllint
-  - repo: https://github.com/tekwizely/pre-commit-golang
-    rev: v0.8.2
+        name: Lint YAML files
+  - repo: https://github.com/antonbabenko/pre-commit-terraform
+    rev: v1.50.0
     hooks:
-      # - id: go-build-mod
-      # - id: go-build-pkg
-      # - id: go-build-repo-mod
-      # - id: go-build-repo-pkg
-      # - id: go-test-mod
-      # - id: go-test-pkg
-      # - id: go-test-repo-mod
-      # - id: go-test-repo-pkg
-      # - id: go-vet
-      # - id: go-vet-mod
-      # - id: go-vet-pkg
-      # - id: go-vet-repo-mod
-      # - id: go-vet-repo-pkg
-      # - id: go-sec-mod
-      # - id: go-sec-pkg
-      # - id: go-sec-repo-mod
-      # - id: go-sec-repo-pkg
-      - id: go-fmt
-        args: ["-s"]
-      - id: go-imports
-      - id: go-returns
-      - id: go-lint
-      # - id: go-critic
-      # - id: golangci-lint
-      # - id: golangci-lint-mod
-      # - id: golangci-lint-pkg
-      # - id: golangci-lint-repo-mod
-      # - id: golangci-lint-repo-pkg
+      - id: terraform_fmt
+      - id: terraform_validate
+      - id: terraform_tflint
+      - id: checkov
+      - id: terraform_docs_replace
