--- a/precommit/repos/default.yaml
+++ b/precommit/repos/default.yaml
@@ -4,6 +4,8 @@ repos:
     rev: v4.0.1
     hooks:
       - id: detect-aws-credentials
+        args:
+          - --allow-missing-credentials
       - id: detect-private-key
       - id: check-merge-conflict
       - id: check-case-conflict
