--- a/precommit/repos/default.yaml
+++ b/precommit/repos/default.yaml
@@ -12,17 +12,14 @@ repos:
       - id: check-symlinks
       - id: check-added-large-files
       - id: check-yaml
-        name: Check YAML
       - id: check-json
-        name: Check JSON
       - id: check-toml
-        name: Check TOML
-      - args:
+      - id: pretty-format-json
+        args:
           - --autofix
-        id: pretty-format-json
-      - args:
+      - id: trailing-whitespace
+        args:
           - --markdown-linebreak-ext=md
-        id: trailing-whitespace
       - id: end-of-file-fixer
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.27.1
