--- a/precommit/repos/default.yaml
+++ b/precommit/repos/default.yaml
@@ -1,7 +1,7 @@
 ---
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.4.0
     hooks:
       - id: detect-aws-credentials
         args:
@@ -14,18 +14,24 @@ repos:
       - id: check-yaml
       - id: check-json
       - id: check-toml
-      - id: pretty-format-json
-        args:
-          - --autofix
       - id: trailing-whitespace
         args:
           - --markdown-linebreak-ext=md
       - id: end-of-file-fixer
   - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.27.1
+    rev: v0.33.0
     hooks:
       - id: markdownlint
-  - repo: https://github.com/zricethezav/gitleaks
-    rev: v7.5.0
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.0.0-alpha.6
     hooks:
-      - id: gitleaks
+      - id: prettier
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.2.4
+    hooks:
+      - id: codespell
+        name: codespell
+        description: Checks for common misspellings in text files.
+        entry: codespell
+        language: python
+        types: [text]
