--- a/precommit/repos/go.yaml
+++ b/precommit/repos/go.yaml
@@ -1,7 +1,7 @@
 ---
 repos:
   - repo: https://github.com/tekwizely/pre-commit-golang
-    rev: v0.8.3
+    rev: v1.0.0-rc.1
     hooks:
       - id: go-imports
       - id: go-returns
