--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,60 +1,61 @@
----
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
-    hooks:
-      - id: detect-aws-credentials
-        args:
+  - hooks:
+      - args:
           - --allow-missing-credentials
+        id: detect-aws-credentials
       - id: detect-private-key
       - id: check-merge-conflict
       - id: check-case-conflict
       - id: check-symlinks
       - id: check-added-large-files
       - id: check-yaml
-        name: Check YAML
       - id: check-json
-        name: Check JSON
       - id: check-toml
-        name: Check TOML
-      - id: pretty-format-json
-        args:
-          - --autofix
-      - id: trailing-whitespace
-        args:
+      - args:
           - --markdown-linebreak-ext=md
+        id: trailing-whitespace
       - id: end-of-file-fixer
-  - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.27.1
-    hooks:
-      - id: markdownlint
-  - repo: https://github.com/zricethezav/gitleaks
-    rev: v7.5.0
-    hooks:
-      - id: gitleaks
-  - repo: https://github.com/tekwizely/pre-commit-golang
-    rev: v0.8.3
-    hooks:
-      - id: go-imports
-      - id: go-returns
-      - id: go-lint
-      - id: golangci-lint
-  - repo: https://github.com/mhristof/pre-commit-golang/
-    rev: v0.1.0
-    hooks:
-      - id: gofumpt
-      - id: go-unit-tests
-      - id: go-static-check
-  - repo: https://github.com/adrienverge/yamllint.git
-    rev: v1.26.1
-    hooks:
-      - id: yamllint
-        name: Lint YAML files
-  - repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.50.0
-    hooks:
+    repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
+  - hooks:
+      - id: prettier
+    repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.0.0-alpha.6
+  - hooks:
+      - entry: codespell
+        id: codespell
+        language: python
+        name: codespell
+        types:
+          - text
+    repo: https://github.com/codespell-project/codespell
+    rev: v2.2.4
+  - hooks:
       - id: terraform_fmt
       - id: terraform_validate
       - id: terraform_tflint
-      - id: checkov
-      - id: terraform_docs_replace
+      - id: terraform_checkov
+      - id: terraform_docs
+    repo: https://github.com/antonbabenko/pre-commit-terraform
+    rev: v1.77.2
+  - hooks:
+      - entry:
+          /bin/bash -c 'terraform providers lock -platform=windows_amd64 -platform=darwin_amd64
+          -platform=linux_amd64'
+        files: (.terraform.lock.hcl|version.tf)
+        id: terraform-lock
+        language: system
+        name: terraform-lock
+        types:
+          - terraform
+    repo: local
+  - hooks:
+      - entry: /bin/bash -c 'yor tag --tag-local-modules=true --directory .'
+        id: yor
+        language: system
+        name: yor
+        stages:
+          - push
+        types:
+          - terraform
+    repo: local
