--- a/nake/precommit/default.yml
+++ b/nake/precommit/default.yml
@@ -18,10 +18,6 @@ repos:
         args:
           - --markdown-linebreak-ext=md
       - id: end-of-file-fixer
-  - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.33.0
-    hooks:
-      - id: markdownlint
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.0.0-alpha.6
     hooks:
@@ -31,7 +27,7 @@ repos:
     hooks:
       - id: codespell
         name: codespell
-        description: Checks for common misspellings in text files.
-        entry: codespell
         language: python
-        types: [text]
+        entry: codespell
+        types:
+          - text
