--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,10 @@
 repos:
-  - hooks:
-      - args:
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
+    hooks:
+      - id: detect-aws-credentials
+        args:
           - --allow-missing-credentials
-        id: detect-aws-credentials
       - id: detect-private-key
       - id: check-merge-conflict
       - id: check-case-conflict
@@ -11,22 +13,20 @@ repos:
       - id: check-yaml
       - id: check-json
       - id: check-toml
-      - args:
+      - id: trailing-whitespace
+        args:
           - --markdown-linebreak-ext=md
-        id: trailing-whitespace
       - id: end-of-file-fixer
-    repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
-  - hooks:
-      - id: prettier
-    repo: https://github.com/pre-commit/mirrors-prettier
+  - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.0.0-alpha.6
-  - hooks:
-      - entry: codespell
-        id: codespell
+    hooks:
+      - id: prettier
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.2.4
+    hooks:
+      - id: codespell
         language: python
-        name: codespell
+        entry: codespell
         types:
           - text
-    repo: https://github.com/codespell-project/codespell
-    rev: v2.2.4
+        name: codespell
