--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ nake = 'nake.nake:main'
 [tool.poetry.dependencies]
 python = "^3.11"
 pyyaml = "^6.0"
+requests = "^2.28.2"
+ruamel-yaml = "^0.17.21"
+jinja2 = "^3.1.2"
 
 [build-system]
 requires = ["poetry-core"]
