--- a/nake/precommit/default.yml
+++ b/nake/precommit/default.yml
@@ -18,6 +18,8 @@ repos:
         args:
           - --markdown-linebreak-ext=md
       - id: end-of-file-fixer
+      - id: no-commit-to-branch
+        args: ["--branch", "main"]
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.0.0-alpha.6
     hooks:
