--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pyyaml = "^6.0"
 requests = "^2.28.2"
 ruamel-yaml = "^0.17.21"
 jinja2 = "^3.1.2"
+python-hcl2 = "^4.3.1"
 
 [build-system]
 requires = ["poetry-core"]
